# rmdocs

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
rmdocs/: __main__.py  assertion.py  debug.py  export.py  io.py  logger.py  parse.py
rmdocs/compile/: brush.py  compiler.py  svg.py
rmdocs/struct/: content.py  file.py  metadata.py  page.py
rmtree/: __main__.py  debug.py  logger.py  main.py
rmtree/compile/: compiler.py  param.py  svg.py
rmtree/struct/: content.py  file.py  metadata.py  page.py
tests/: test_parse.py
tests/input/: Anchors.rmdoc  Anchors2.rmdoc  Bold fonts.rmdoc  Colors.rmdoc  Highlighter.rmdoc  Italic fonts.rmdoc  Medium column fonts.rmdoc  Narrow column fonts.rmdoc  Template dots large.rmdoc  Template grid small.rmdoc  Tools.rmdoc  Wide column fonts.rmdoc
