[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rmtree"]

[project]
name = "rmtree"
version = "2.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

description = "Convert the file tree from the reMarkable tablet to PDFs"
authors = [{ name = "Seb-sti1", email = "noreply@kerbourch.fr" }]
dependencies = [
    "pypdf",
    "cairosvg",
    "rmscene>=0.8.0, <0.9.0",
    "tqdm",
]


[project.scripts]
rmtree = "rmtree.__main__:main"
