[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rmdocs", "rmdocs.compile"]

[project]
name = "rmdocs"
version = "3.5.3"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

description = "Convert the file tree from the reMarkable tablet to PDFs"
authors = [{ name = "Seb-sti1", email = "noreply@kerbourch.fr" }]
dependencies = [
    "pypdf",
    "cairosvg",
    "rmscene>=0.8.0, <0.9.0",
    "rich",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Environment :: Console"
]

[project.urls]
Homepage = "https://github.com/Seb-sti1/rmdocs"
Issues = "https://github.com/Seb-sti1/rmdocs/issues"

[project.scripts]
rmdocs = "rmdocs.__main__:main"
